noinst_LTLIBRARIES = libelsa-systray.la

libelsa_systray_la_SOURCES = elsa-systray.c	\
							 na-tray-manager.c	\
							 na-tray-child.c	\
							 $(NULL)
libelsa_systray_la_CFLAGS = $(GTK3_CFLAGS)	\
							$(X11_CFLAGS)	\
							$(NULL)
libelsa_systray_la_LIBADD = $(GTK3_LIBS)	\
							$(X11_LIBS)	\
							$(NULL)
